# advent

./: .flake8  .pre-commit-config.yaml  common.py  pyproject.toml
year2018/day01/: solve.py
year2018/day02/: solve.py
year2018/day03/: solve.py
year2018/day04/: solve.py
year2018/day05/: solve.py
year2018/day06/: solve.py
year2018/day07/: solve.py
year2018/day08/: solve.py
year2018/day09/: solve.py
year2018/day10/: solve.py
year2018/day11/: solve.py
year2018/day12/: solve.py
year2018/day13/: solve.py
year2018/day14/: solve.py
