[tool.poetry]
name = "advent"
version = "1.0.0"
description = ""
authors = ["David Lord <davidism@gmail.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.7"
attrs = "^18.2"
networkx = "^2.2"
more-itertools = "^4.3"

[tool.poetry.dev-dependencies]
ipython = "^7.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
